added purchase order entries

--- a/app/views/purchase_order_entries/purchase_order/_post_confirm_bar.html.erb
+++ b/app/views/purchase_order_entries/purchase_order/_post_confirm_bar.html.erb
@@ -2,9 +2,9 @@
 	<tbody>
 		<tr> 
 			<td style='text-align: center;'>  
-				<%= link_to print_sales_order_url(parent, :format => :pdf),
+				<%= link_to root_url ,
  					:class => " btn btn-primary" do %>
-					<i class="icon-ok"></i> Download Sales Order
+					<i class="icon-ok"></i> Download Purchase Order
 				<% end %>
 			</td>
 		</tr>
