--- a/app/views/purchase_order_entries/_new_object_form.html.erb
+++ b/app/views/purchase_order_entries/_new_object_form.html.erb
@@ -1,80 +1,49 @@
 <% if new_object.persisted? %>
 	<% id = 'edit_object'%>
+	<% rest_method_class = 'rest_put' %>
 <% else %>
 	<% id = 'new_object'%>
+	<% rest_method_class = 'rest_post' %>
 <% end %>
 
 <%= simple_form_for( new_object, :url => url,
       :method => :post , 
-      :html => {:class => " form-horizontal prevent_double_submit ajax-form   no_content_form",
+      :html => {:class => "  prevent_double_submit ajax-form  #{rest_method_class} no_content_form",
         :id => "#{id}"}) do |f| %>
  
+  <%= f.input :item_id, :label =>" Item", :hint => "Pilih item yang akan dipesan"   %>
  
-
-	<%= f.input :material_id, :label => "Material" do %>
-     <%= f.select :material_id, 
-         Material.all_selectables %>
-  <% end %>
-
-	<hr />
-		<%= f.input :name, :label =>"Nama Item", :hint => "Nama item menurut customer"   %>
-		<%= f.input :description, :label =>"Deskripsi item",
-		 			:input_html => {:class => "input-xlarge ", :rows => '5'} ,
-		 			:hint => "Deskripsi tambahan mengenai item tersebut" %>
-	
-	
-	<hr />
 		
-		<%= f.input :weight_per_piece, :label =>"Berat satuan", 
-				:hint => "Dalam kilogram, sensitif sampai 2 decimal. Contoh: <b>2.15</b>kg"   %> 
-
-
-		<%= f.input :is_pending_pricing, :label =>"Pending Pricing?", 
-					:hint => "Tunda Pembuatan Harga?" %>
-	<hr />
-		<%= f.input :is_pre_production, :label =>"Pattern?", :hint => "Termasuk jasa pembuatan pattern?" %>
-		<%= f.input :pre_production_price, :label =>"Biaya Pola",
-		   	:hint => "Dalam rupiah. Langsung isi tanpa koma. <br />"+ 
-							"Contoh untuk isi sembilan puluh lima ribu:"  + 
-							"<b>95000</b>" 		%>
-							
-		<br />
-		<%= f.input :is_production, :label =>"Casting?", :hint => "Termasuk jasa casting?"  %>
-		<%= f.input :quantity_for_production, :label =>"Jumlah Cast"   %>
-		<%= f.input :production_price, :label =>"Biaya Cetak",
-		   	:hint => "Dalam rupiah. Langsung isi tanpa koma. <br />"+ 
-							"Contoh untuk isi sembilan puluh lima ribu:"  + 
-							"<b>95000</b>" 		%>
-		<%= f.input :is_pricing_by_weight, :label =>"Biaya Cetak Berdasarkan Berat?", 
-			:hint => "Centang jika biaya berdasarkan berat. Jika berdasarkan quantity, jangan di centang"  %>					
-		<br />
-		
-		<%= f.input :is_post_production, :label =>"Machining?", :hint => "Termasuk jasa bubut?"  %>
-		<%= f.input :quantity_for_post_production, :label =>"Jumlah Bubut"   %>
-		<%= f.input :post_production_price, :label =>"Biaya Bubut",
-		   	:hint => "Dalam rupiah. Langsung isi tanpa koma. <br />"+ 
-							"Contoh untuk isi sembilan puluh lima ribu:"  + 
-							"<b>95000</b>" 		%>
-	
-	<hr />
-		<%= f.input :is_delivered, :label =>"Delivery", :hint => "Centang jika diantar"  %>
-		<%= f.input :delivery_address, :label =>"Alamat Delivery" ,
-		  	:input_html => {:class => "input-xlarge ", :rows => '5'}%>
-	
-		
-	
-	
+		<%= f.input :quantity, :label =>"Jumlah", 
+				:hint => "Berapa banyak yang akan dipesan?"   %> 
+  
 
   <div class="form-actions">
 	
 		<% if new_object.persisted? %>
-			<%= f.button :submit , :class => "btn btn-primary", :value=> "Update Sales Item" %>
+			<%= f.button :submit , :class => "btn btn-primary", :value=> "Update Purchase Order Entry " %>
 		<% else %>
-			<%= f.button :submit , :class => "btn btn-primary", :value=> "Create Sales Item" %>
+			<%= f.button :submit , :class => "btn btn-primary", :value=> "Create Purchase Order Entry "  %>
 		<% end %>
 		
   </div>
 <% end %>
 
+
+<script type="text/javascript">
+$(document).ready(function() {
+	
+	 $("#purchase_order_entry_item_id").tokenInput('<%=	search_item_url %>', {
+		prePopulate:   	[
+				<% if not new_object.item_id.nil? %> 
+				{id: <%= new_object.item_id %>, name: '<%= new_object.item.name %>'}
+				<% end %>
+			],
+		zindex: 9999,
+		propertyToSearch: "name",
+		tokenLimit: 1
+	});
+});
+</script>
 
  
