--- a/app/views/purchase_order_entries/edit.js.erb
+++ b/app/views/purchase_order_entries/edit.js.erb
@@ -1,8 +1,8 @@
 $(document).ready(function(){
 	  
-		<% new_form = escape_javascript(  render :partial => "sales_items/new_object_form", :locals => {
+		<% new_form = escape_javascript(  render :partial => "purchase_order_entries/new_object_form", :locals => {
 	    :new_object => @object , 
-			:url => update_sales_item_url(@object, :details => params[:details])  
+			:url =>  purchase_order_entry_url(@object, :details => params[:details])  
 	  })%>
  
 	$("#editEntry .modal-body").append('<%= new_form %>');
