--- a/app/views/purchase_order_entries/new.html.erb
+++ b/app/views/purchase_order_entries/new.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "layouts/masthead" ,:locals => {
-	:title => "Sales Item",
-	:description => "Create New Sales Item for Sales Order <b>#{@parent.code}</b>".html_safe
+	:title => "Purchase Entry",
+	:description => "Create New Purchase Entry for Purchase Order <b>#{@parent.code}</b>".html_safe
 }%>
 
 
@@ -16,11 +16,11 @@
 			<div class="span12">
 				
 				<% if @parent.is_confirmed == false %>
-					<%= render :partial => "sales_items/sales_order/actionbar", :locals => {
+					<%= render :partial => "purchase_order_entries/purchase_order/actionbar", :locals => {
 						:parent => @parent
 					}%>
 				<% else %>
-					<%= render :partial => "sales_items/sales_order/post_confirm_bar", :locals => {
+					<%= render :partial => "purchase_order_entries/purchase_order/post_confirm_bar", :locals => {
 						:parent => @parent
 					}%>
 				<% end %>
@@ -28,7 +28,7 @@
 				
 				<hr />
 				 
-				 <%= render :partial => 'sales_items/sales_order/item_list', :locals => {
+				 <%= render :partial => 'purchase_order_entries/purchase_order/item_list', :locals => {
 					:objects => @objects, 
 					:parent => @parent
 				}%>
@@ -55,7 +55,7 @@
 
 <div class="modal fade hide" id="editEntry">
   <div class="modal-header">
-    <h3>Edit Sales Item</h3>
+    <h3>Edit Purchase Order Entry</h3>
   </div>
   <div class="modal-body"> 
 	<!-- content -->
@@ -68,7 +68,7 @@
 
 <div class="modal fade hide" id="newEntry">
   <div class="modal-header">
-    <h3>New Sales Item</h3>
+    <h3>New Purchase Order Entry</h3>
   </div>
   <div class="modal-body"> 
 	<!-- content -->
@@ -81,13 +81,13 @@
 
 
 <div class="hidden" id="delete_entry_form_wrapper">
-  <%= form_for SalesOrder.new, :url =>delete_sales_item_url , :method => :post   do |f| %>
+  <%= form_for PurchaseOrder.new, :url =>root_url , :method => :post   do |f| %>
     <%= hidden_field_tag 'object_to_destroy_id' , ''  %> 
   <% end %>
 </div>
 
 <div class="hidden" id="confirm_order">
-  <%= form_for SalesEntry.new, :url => confirm_sales_order_url(@parent)  do |f| %> 
+  <%= form_for PurchaseOrder.new, :url => confirm_purchase_order_url(@parent)  do |f| %> 
   <% end %>
 </div>
 
