--- a/app/views/purchase_order_entries/purchase_order/_actionbar.html.erb
+++ b/app/views/purchase_order_entries/purchase_order/_actionbar.html.erb
@@ -2,25 +2,18 @@
 	<tbody>
 		<tr>
 			<td style='text-align:left;'>
-				<%= link_to new_sales_order_sales_item_url( parent ), 
+				<%= link_to new_purchase_order_purchase_order_entry_url( parent ), 
 					:class => "new_entry btn btn-primary" do %>
-					<i class="icon-plus"></i>Sales Item Baru
+					<i class="icon-plus"></i>Purchase Item Baru
 				<% end %>
 			</td>
-			
-			<td style='text-align:center;'>
-				<%= link_to new_sales_order_derivative_sales_item_url( parent ), 
-					:class => "new_entry btn btn-primary" do %>
-					<i class="icon-plus"></i>Repeat or Generic
-				<% end %>
-			</td>
-			
+	 
 			<td style='text-align: right;'> 
 				
 			 
 				
 				
-				<%= link_to confirm_sales_order_url(parent),
+				<%= link_to confirm_purchase_order_url(parent),
 					:id => 'confirm' , 
 					:class => " btn btn-primary" do %>
 					<i class="icon-ok"></i> Confirm
