--- a/app/views/purchase_order_entries/purchase_order/_item_list.html.erb
+++ b/app/views/purchase_order_entries/purchase_order/_item_list.html.erb
@@ -3,9 +3,8 @@
 		<tr>
 			<th>Code</th>
 			<th>Nama</th>
-			<th>Spec</th>  
-			<th>Service</th>   <!--  preproduction, production, post production + delivery? -->
-				<th colspan='2'>Action</th>
+			<th>Quantity</th>
+			<th colspan='2'>Action</th>
 		</tr>
 	</thead>
 	<tbody> 
@@ -15,7 +14,7 @@
 		<% end %>
 		
 		<% objects.each do |object| %>
-			<%= render :partial =>  'sales_items/entry', :locals => {
+			<%= render :partial =>  'purchase_order_entries/entry', :locals => {
 				:object => object ,
 				:parent => parent ,
 				:details => details 
