--- a/app/views/purchase_receival_entries/create.js.erb
+++ b/app/views/purchase_receival_entries/create.js.erb
@@ -4,28 +4,28 @@ $(document).ready(function(){
 	var $form = $("form", $modal );
 	$form.spin(false);
 	
-	<% new_form = escape_javascript(  render :partial => "purchase_order_entries/new_object_form", :locals => {
+	<% new_form = escape_javascript(  render :partial => "purchase_receival_entries/new_object_form", :locals => {
     :new_object => @new_object , 
-		:url => purchase_order_purchase_order_entries_url(@parent),
+		:url => purchase_receival_purchase_receival_entries_url(@parent),
   })%>
 
  
 	
 	<% if @object.errors.size == 0  %>
 		// show the growl. save. done. 
-		<% new_entry = escape_javascript(  render :partial => "purchase_order_entries/entry", :locals => {
+		<% new_entry = escape_javascript(  render :partial => "purchase_receival_entries/entry", :locals => {
 	    :object => @object,
 	  	:parent => @parent 
 	  })%>
 		$("#tableview tbody").prepend('<%= new_entry %>');
 		
-		$.msgbox("Purchase Item <b><%= @object.code %></b> is created.", 
+		$.msgbox("Purchase  Receival Item <b><%= @object.code %></b> is created.", 
 					{type: "info"});
 		$modal.modal('hide'); 
 		$form.remove();
 	<% else %>
 		$form.replaceWith('<%= new_form %>');
-		 $.msgbox("Gagal membuat Purchase Item baru.", 
+		 $.msgbox("Gagal membuat Purchase Receival Item baru.", 
 					{type: "error"});
 	<% end %>
 	
