--- a/app/views/deliveries/_new_object_form.html.erb
+++ b/app/views/deliveries/_new_object_form.html.erb
@@ -1,40 +1,30 @@
 <% if new_object.persisted? %>
 	<% id = 'edit_object'%>
+	<% rest_method_class = 'rest_put' %>
 <% else %>
 	<% id = 'new_object'%>
+	<% rest_method_class = 'rest_post' %>
 <% end %>
 
 <%= simple_form_for( new_object, :url => url,
       :method => :post , 
-      :html => {:class => " prevent_double_submit ajax-form   no_content_form",
+      :html => {:class => " prevent_double_submit ajax-form #{rest_method_class}  no_content_form",
         :id => "#{id}"}) do |f| %>
 
 	 
 
 
-  <%= f.input :customer_id  , :input_html => {:class => "input-xlarge "}, 
-  			:label => "Customer" %>
-
-
-	<%= f.input :delivery_address  , :input_html => {:class => "input-xlarge", :rows => 5 }, 
-  			:label => "Alamat Pengiriman" %>
-
-	<%= f.input :delivery_date  ,:input_html => {:class => "input-xlarge datepicker", 
-																		:value =>"#{print_date_input(new_object.delivery_date)}"}, 
-			  			:label => "Tanggal Pengiriman", 
-			 				:hint => "format: <b>dd</b>/<b>mm</b>/<b>yyyy</b>. <br />" + 
-											"Contoh untuk 7 july 2003: 7/7/2003 <br />" + 
-											"Contoh untuk 13 October 2003: 13/10/2003",
-							:as => :string				%>
+  <%= f.input :employee_id  , :input_html => {:class => "input-xlarge "}, 
+  			:label => "Karyawan" %>
 
  
 
   <div class="form-actions">
 	
 		<% if new_object.persisted? %>
-			<%= f.button :submit , :class => "btn btn-primary", :value=> "Update Delivery" %>
+			<%= f.button :submit , :class => "btn btn-primary", :value=> "Update Surat Jalan" %>
 		<% else %>
-			<%= f.button :submit , :class => "btn btn-primary", :value=> "Create Delivery" %>
+			<%= f.button :submit , :class => "btn btn-primary", :value=> "Buat Surat Jalan" %>
 		<% end %>
 		
   </div>
@@ -46,20 +36,15 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	
-	 $("#delivery_customer_id").tokenInput('<%=	search_customer_url %>', {
+	 $("#delivery_employee_id").tokenInput('<%=	search_employee_url %>', {
 		prePopulate:   	[
-				<% if not new_object.customer_id.nil? %> 
-				{id: <%= new_object.customer_id %>, name: '<%= new_object.customer.name %>'}
+				<% if not new_object.employee_id.nil? %> 
+				{id: <%= new_object.employee_id %>, name: '<%= new_object.employee.name %>'}
 				<% end %>
 			],
 		zindex: 9999,
 		propertyToSearch: "name",
 		tokenLimit: 1
 	});
-
-
- 
-	
-	
 });
 </script>
