--- a/app/views/deliveries/new.html.erb
+++ b/app/views/deliveries/new.html.erb
@@ -106,7 +106,7 @@
 
 
 <div class="hidden" id="delete_entry_form_wrapper">
-  <%= form_for SalesOrder.new, :url =>delete_delivery_url , :method => :post   do |f| %>
+  <%= form_for Delivery.new, :url =>root_url , :method => :post   do |f| %>
     <%= hidden_field_tag 'object_to_destroy_id' , ''  %> 
   <% end %>
 </div>
