--- a/app/views/deliveries/update.js.erb
+++ b/app/views/deliveries/update.js.erb
@@ -58,7 +58,7 @@ $(document).ready(function(){
 		<% elsif  not @has_no_errors %> 
 			<% new_form = escape_javascript(   render :partial => "deliveries/new_object_form", :locals => {
 		    :new_object => @object , 
-				:url => update_delivery_url(@object, :details => params[:details])  
+				:url => delivery_url(@object, :details => params[:details])  
 		  })%>
 			//replace the form, show the edit
 			$form.replaceWith("<%= new_form %>"); 
