--- a/app/views/delivery_entries/create.js.erb
+++ b/app/views/delivery_entries/create.js.erb
@@ -6,8 +6,7 @@ $(document).ready(function(){
 	
 	<% new_form = escape_javascript(  render :partial => "delivery_entries/new_object_form", :locals => {
     :new_object => @new_object , 
-		:url => delivery_delivery_entries_url(@parent),
-		:customer => @customer 
+		:url => delivery_delivery_entries_url(@parent)
   })%>
 
  
@@ -20,7 +19,7 @@ $(document).ready(function(){
 	  })%>
 		$("#tableview tbody").prepend('<%= new_entry %>');
 		
-		$.msgbox("Delivery for sales item <b><%= @object.sales_item.code %></b> is created.", 
+		$.msgbox("Delivery for  item <b><%= @object.item.name %></b> is created.", 
 					{type: "info"});
 		$modal.modal('hide'); 
 		$form.remove();
