--- a/app/views/delivery_entries/edit.js.erb
+++ b/app/views/delivery_entries/edit.js.erb
@@ -2,8 +2,7 @@ $(document).ready(function(){
 	  
 		<% new_form = escape_javascript(  render :partial => "delivery_entries/new_object_form", :locals => {
 	    :new_object => @object , 
-			:url => update_delivery_entry_url(@object, :details => params[:details]),
-			:customer => @customer  
+			:url => delivery_entry_url(@object, :details => params[:details])  
 	  })%>
  
 	$("#editEntry .modal-body").append('<%= new_form %>');
