--- a/app/views/purchase_order_entries/purchase_order/_post_confirm_bar.html.erb
+++ b/app/views/purchase_order_entries/purchase_order/_post_confirm_bar.html.erb
@@ -4,7 +4,7 @@
 			<td style='text-align: center;'>  
 				<%= link_to root_url ,
  					:class => " btn btn-primary" do %>
-					<i class="icon-ok"></i> Download Purchase Order
+					<i class="icon-ok"></i> Confirmed
 				<% end %>
 			</td>
 		</tr>
