--- a/app/views/purchase_orders/generate_details.js.erb
+++ b/app/views/purchase_orders/generate_details.js.erb
@@ -3,7 +3,7 @@ $(document).ready(function(){
 	
 	$form.spin(false);
 	
-	<% details = escape_javascript( render :partial => "sales_orders/details", 
+	<% details = escape_javascript( render :partial => "purchase_orders/details", 
 		:locals => {
 	    :parent => @parent ,
 			:children 		=> @children
