--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-this is the Home#Index
+<h1>Scope</h1>
+
+<ul>
+	<li>
+		Pemesanan barang
+	</li>
+	<li>
+		Penerimaan barang pesanan
+	</li>
+	<li>
+		Pengiriman barang + update hasil pengiriman
+	</li>
+</ul>
